// $ protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative bifrost/proto/bifrost.proto

syntax = "proto3";

option go_package = "github.com/avamsi/heimdall/bifrost/proto";

import "google/protobuf/timestamp.proto";

service Bifrost {
    rpc CommandStart (CommandStartRequest) returns (CommandStartResponse) {}
    rpc CommandEnd (CommandEndRequest) returns (CommandEndResponse) {}
    rpc ListCommands (ListCommandsRequest) returns (ListCommandsResponse) {}
    rpc WaitForCommand (WaitForCommandRequest) returns (WaitForCommandResponse) {}
    rpc CacheCommand (CacheCommandRequest) returns (CacheCommandResponse) {}
}

message Command {
    string command = 1;
    google.protobuf.Timestamp start_time = 2;
    // Can be empty for new commands (i.e., in CommandStart).
    string id = 3;
}

// rpc CommandStart

message CommandStartRequest {
	Command command = 1;
}

message CommandStartResponse {
    string id = 1;
}

// rpc CommandEnd

message CommandEndRequest {
	Command command = 1;
    int32 return_code = 2;
    bool force_notify = 3;
    google.protobuf.Timestamp last_interaction_time = 4;
    string username = 5;
    string hostname = 6;
}

message CommandEndResponse {}

// rpc ListCommands

message ListCommandsRequest {}

message ListCommandsResponse {
    repeated Command commands = 1;
}

// rpc WaitForCommand

message WaitForCommandRequest {
    string id = 1;
}

message WaitForCommandResponse {}

// rpc CacheCommand

message CacheCommandRequest {
    string command = 1;
    repeated string args = 2;
    int32 within = 3;
    bool any = 4;
}

message CacheCommandResponse {
    string stdout = 1;
    string stderr = 2;
    int32 return_code = 3;
    google.protobuf.Timestamp return_time = 4;
}
